# deadlock-funvars

./: Cargo.toml
src/: cvar.rs  main.rs  remote.rs
