[package]
name = "funvars"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"

[dependencies.windows]
version = "0.62"
features = [
	"Win32_System_Diagnostics_Debug",
	"Win32_System_Diagnostics_ToolHelp",
	"Win32_System_SystemInformation",
	"Win32_System_SystemServices",
	"Win32_System_Threading",
]
